# udacity-data-science-project-2

./: Readme.md  pyproject.toml
Project-1/: README.md
Project-2/: ETL Pipeline Preparation.ipynb  ML Pipeline Preparation.ipynb  README.md
Project-2/app/: run.py
Project-2/data/: process_data.py
Project-2/models/: train_classifier.py
Project-3/: Readme.md  Recommendations_with_IBM.html  Recommendations_with_IBM.ipynb
Project-4/: Arvato Project Workbook.ipynb  DIAS Attributes - Values 2017.xlsx  Readme.md  functions.py  process_data.py  requirements.txt
